--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <h1>My page</h1>
 
-    <div>To jest strona standardowa
-    </div>
+    <div>To jest strona standardowa</div>
+
+    akapit dodany w main
 </body>
 </html>
