--- a/mateusz.html
+++ b/mateusz.html
@@ -3,21 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Podstrona</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
     <div>
-        <button>guzik</button>            
+        <div>
+            TUTAJ BEDZIE FOTO
+        </div>
+        <div>
+            Lorem impsum galarting halarting haertlet youti fzkc lod er fdf xxcx asda wew rtertw asdx
+        </div>
     </div>
-</header>
-    <h1>My page</h1>
-
-    <div>To jest strona standardowa</div>
-
-    akapit dodany w main
-    
-    zmiana w dev
 </body>
 </html>
