--- a/mateusz.html
+++ b/mateusz.html
@@ -12,7 +12,7 @@
             TUTAJ BEDZIE FOTO
         </div>
         <div>
-            Lorem impsum galarting halarting haertlet youti fzkc lod er fdf xxcx asda wew rtertw asdx
+            Lorem dripsum garlic bomb ukraine youti fzkc lod er fdf xxcx asda wew rtertw asdx
         </div>
     </div>
 </body>
