--- a/podstrona.html
+++ b/podstrona.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Podstrona</title>
 </head>
+<img src="little-flash-card-jpg.jpg" >
 <body>
     Podstrona
 </body>
