--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
+<header class="header">
     <div>
-        <button>guzik</button>            
+        <button id="button">guzik</button>            
     </div>
 </header>
     <h1>My page</h1>
