--- a/podstrona.html
+++ b/podstrona.html
@@ -5,8 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Podstrona</title>
 </head>
-<img src="little-flash-card-jpg.jpg" >
+ <button> Click Me</button>
+ <style>
+    html{
+        background-color: red;
+    }
+    div{
+        text-align: center;
+        font-size: 50px;
+        font-family: 'Times New Roman', Times, serif;
+        text-shadow: 2px;
+    }
+ </style>
+
 <body>
-    Podstrona
+    <div> Moja strona</div>
 </body>
 </html>
