--- a/tomek.html
+++ b/tomek.html
@@ -12,7 +12,7 @@
             Tutaj będzie zdjęcie
         </div>
         <div>
-            Tutaj będą informacje
+            Tutaj będą informacje z polski
         </div>
     </div>
 </body>
