--- a/max.html
+++ b/max.html
@@ -5,25 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Max</title>
 </head>
- <button id="guzior"> Click Me</button>
- <style>
-    html{
-        background-color: red;
-    }
-    div{
-        text-align: center;
-        font-size: 50px;
-        font-family: 'Times New Roman', Times, serif;
-        text-shadow: 2px;
-    }
-    .guzior{
-        background-color: green;
-        size: 50px;
-        font-size: 50px;
-    }
- </style>
 
 <body>
+    <button id="guzior"> Kryt-On</button>
+    <button id="guzior"> Kryt-Off</button>
     <div> Moja strona</div>
 </body>
 </html>
