--- a/oskar.html
+++ b/oskar.html
@@ -12,6 +12,7 @@
             hejka tu len ak
         </div>
         <div>
+            tutaj beda informacje o afryce
             jestem snajperem tutaj a to moje awupe jezeli njest zobaczysz no to jz jestes trupem
         </div>
     </div>
