--- a/max.html
+++ b/max.html
@@ -10,5 +10,7 @@
     <button id="guzior"> Kryt-On</button>
     <button id="guzior"> Kryt-Off</button>
     <div> Moja strona</div>
+    <div> FORTNITE CZY PUBG? PUBG. PUBG czy H1Z1? PUBG</div>
+    <div>dattebayo</div>
 </body>
 </html>
