--- a/tomek.html
+++ b/tomek.html
@@ -12,7 +12,7 @@
             Tutaj będzie zdjęcie
         </div>
         <div>
-            Tutaj będą informacje z polski
+            Tutaj będą informacje
         </div>
     </div>
 </body>
