--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
 <header class="header">
     <div>
-        <button id="button">guzik</button>            
+        <button id="button">button</button>            
     </div>
 </header>
-    <h1>My page</h1>
+    <h1>Moja strona</h1>
 
     <div>To jest strona standardowa</div>
 
