--- a/marek.html
+++ b/marek.html
@@ -11,6 +11,6 @@
     <button id="guzior"> Kryt-Off</button>
     <div> Moja strona</div>
     <div> FORTNITE CZY PUBG? PUBG. PUBG czy H1Z1? PUBG</div>
-    <div>dattebayo</div>
+    <div>dattebayoo</div>
 </body>
 </html>
