--- a/marek.html
+++ b/marek.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id="guzior"> Kryt-On</button>
-    <button id="guzior"> Kryt-Off</button>
-    <div> Moja strona</div>
-    <div> FORTNITE CZY PUBG? PUBG. PUBG czy H1Z1? PUBG</div>
-    <div>dattebayo</div>
+    <div> Krzysztof Wiesław Hołowczyc – polski kierowca rajdowy, mistrz Europy, prezenter telewizyjny, od 2007 do 2009 poseł do Parlamentu Europejskiego.</div>
+
 </body>
 </html>
