--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
 </head>
 <body>
 <header class="header">
-    <div>
-        <button id="button">button</button>            
+    <div id="menu">
+        <button id="button">button</button>
+        <a href="mateusz.html">Mateusz</a>
+        <a href="marek.html">Marek</a>
+        <a href="max.html">max</a>
+        <a href="oskar.html">Oskar</a>
+        <a href="oskar2.html">Laga Oskar</a>    
+        <a href="tomek.html">Tomek</a>
+        <a href="szymon.html">Szymon</a>
+        <a href="krzychu.html">Krzychu</a>      
+
     </div>
 </header>
     <h1>Moja strona</h1>
-
     <div>To jest strona standardowa</div>
 
     akapit dodany w main
