--- a/marek.html
+++ b/marek.html
@@ -9,9 +9,19 @@
 <body>
     <button id="guzior"> Kryt-On</button>
     <button id="guzior"> Kryt-Off</button>
-    <div> Moja strona</div>
-    <div> FORTNITE CZY PUBG? PUBG. PUBG czy H1Z1? PUBG</div>
-    <div>dattebayoo</div>
-    <div> Krzysztof Wiesław Hołowczyc – polski kierowca rajdowy, mistrz Europy, prezenter telewizyjny, od 2007 do 2009 poseł do Parlamentu Europejskiego.</div>
+  <div>www </div>
+  <div>www </div>
+  <div>www </div>
+
+  <div><h1>inne strony</h1>
+    <a href="index.html">index</a>
+    <a href="mateusz.html">Mateusz</a>
+    <a href="max.html">max</a>
+    <a href="oskar.html">Oskar</a>
+    <a href="oskar2.html">Laga Oskar</a>    
+    <a href="tomek.html">Tomek</a>
+    <a href="szymon.html">Szymon</a>
+    <a href="krzychu.html">Krzychu</a>      
+    </div>
 </body>
 </html>
