--- a/oskar.html
+++ b/oskar.html
@@ -17,5 +17,15 @@
             jestem snajperem tutaj a to moje awupe jezeli njest zobaczysz no to jz jestes trupem
         </div>
     </div>
+    <div><h1>inne strony</h1>
+        <a href="index.html">index</a>
+        <a href="mateusz.html">Mateusz</a>
+        <a href="marek.html">Marek</a>
+        <a href="max.html">max</a>
+        <a href="oskar2.html">Laga Oskar</a>    
+        <a href="tomek.html">Tomek</a>
+        <a href="szymon.html">Szymon</a>
+        <a href="krzychu.html">Krzychu</a>      
+        </div>
 </body>
 </html>
