--- a/oskar2.html
+++ b/oskar2.html
@@ -9,10 +9,10 @@
 <body>
     <div class="menu">
         <div>
-            TUTAJ BEDZIE FOTO
+            hejka jestem oskar laga pochodze z charkova. Moimy zaintersowaniami sa gry typu japanis i kolega po mojej lewej
         </div>
         <div>
-            Lorem dripsum garlic bomb ukraine youti fzkc lod er fdf xxcx asda wew rtertw asdx granie
+            
         </div>
     </div>
     <div><h1>inne strony</h1>
@@ -20,8 +20,7 @@
         <a href="mateusz.html">Mateusz</a>
         <a href="marek.html">Marek</a>
         <a href="max.html">max</a>
-        <a href="oskar.html">Oskar</a>
-        <a href="oskar2.html">Laga Oskar</a>    
+        <a href="oskar.html">Oskar</a>    
         <a href="tomek.html">Tomek</a>
         <a href="szymon.html">Szymon</a>
         <a href="krzychu.html">Krzychu</a>      
