--- a/tomek.html
+++ b/tomek.html
@@ -17,4 +17,14 @@
         <div>kenny to on uczył grać z awp.Full auto lepsze od Krzyśka GeT_RighTa potrafi z jednego końca mapy na drugi walnąć perfekcyjne full auto gdzie każdy strzał leci prosto w ciało przeciwnika.Movement kobry A jego bunnyhop zawstydza samego LOLYOU w smoke'ach czuje się niczym Snax a z pistoletów potrafi zdziałać takie cuda ze olofmeister nie wierzy.Headshoty Z jednego końca longa do gościa w pit'cie wychylonego na milimetr to codzienność.W clutchach czuje się jak ryba w wodzie.Już nie jeden jego niesamowity clutch 1vs5 został wyemitowany przez samego Sparklesa na jego kanale.Jego Vac'owe akcje które zadziwiaja m.in.skany czy zabicie 5 graczy jednym strzałem z awp przez drewienko albo rushujacy na eco przeciwnicy i rozpetane full auto gdzie w 15 setnych sekundy zabija wszystkich przeciwników poprzez strzały w głowę.Miał grać w samym Virtus.Pro odmówił współpracy ponieważ gra for fun. :csgoglobe:</div>
     </div>
 </body>
+<div><h1>inne strony</h1>
+    <a href="index.html">index</a>
+    <a href="mateusz.html">Mateusz</a>
+    <a href="marek.html">Marek</a>
+    <a href="oskar.html">Oskar</a>
+    <a href="oskar2.html">Laga Oskar</a>    
+    <a href="max.html">max</a>
+    <a href="szymon.html">Szymon</a>
+    <a href="krzychu.html">Krzychu</a>      
+    </div>
 </html>spell
