--- a/krzychu.html
+++ b/krzychu.html
@@ -11,6 +11,7 @@
         <div>
             lubie chodzic z kuzynka nad rzeke i jestem jak chopin
         </div>
+        <img id="ph8" src="zdjecia/krzychu.png">
         <div>
            
         </div>
