--- a/marek.html
+++ b/marek.html
@@ -3,25 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Podstrona</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id="guzior"> Kryt-On</button>
-    <button id="guzior"> Kryt-Off</button>
-  <div>www </div>
-  <div>www </div>
-  <div>www </div>
-
-  <div><h1>inne strony</h1>
-    <a href="index.html">index</a>
-    <a href="mateusz.html">Mateusz</a>
-    <a href="max.html">max</a>
-    <a href="oskar.html">Oskar</a>
-    <a href="oskar2.html">Laga Oskar</a>    
-    <a href="tomek.html">Tomek</a>
-    <a href="szymon.html">Szymon</a>
-    <a href="krzychu.html">Krzychu</a>      
+    <div class="menu">
+        <div>
+          Dzisiaj nie pozdrawiam myszeczko :( <Br>
+          A to CHARKOV 
+        </div>
+        <img id="ph2" src="zdjecia/marek.png">
+        <img id="ph3" src="https://www.youtube.com/watch?v=62ie-2p2Vw0">
+        <div>
+        </div>
     </div>
+    <div><h1>inne strony</h1>
+        <a href="index.html">index</a>
+        <a href="mateusz.html">Mateusz</a>
+        <a href="max.html">max</a>
+        <a href="oskar.html">Oskar</a>
+        <a href="oskar2.html">Laga Oskar</a>    
+        <a href="tomek.html">Tomek</a>
+        <a href="szymon.html">Szymon</a>
+        <a href="krzychu.html">Krzychu</a>      
+        </div>
 </body>
 </html>
