--- a/mateusz.html
+++ b/mateusz.html
@@ -14,10 +14,10 @@
         <div>
             Lorem dripsum garlic bomb ukraine youti fzkc lod er fdf xxcx asda wew rtertw asdx granie
         </div>
+        <img id="ph1" src="zdjecia/mateusz.png">
     </div>
     <div><h1>inne strony</h1>
         <a href="index.html">index</a>
-        <a href="mateusz.html">Mateusz</a>
         <a href="marek.html">Marek</a>
         <a href="max.html">max</a>
         <a href="oskar.html">Oskar</a>
