--- a/oskar2.html
+++ b/oskar2.html
@@ -12,9 +12,9 @@
             hejka jestem oskar laga pochodze z charkova. Moimy zaintersowaniami sa gry typu japanis i kolega po mojej lewej
         </div>
         <div>
-            
+            <img src="zdjecia/oskar2.png">
         </div>
-    </div>
+    
     <div><h1>inne strony</h1>
         <a href="index.html">index</a>
         <a href="mateusz.html">Mateusz</a>
@@ -24,6 +24,7 @@
         <a href="tomek.html">Tomek</a>
         <a href="szymon.html">Szymon</a>
         <a href="krzychu.html">Krzychu</a>      
-        </div>
+    </div>  
+    </div>
 </body>
 </html>
