--- a/tomek.html
+++ b/tomek.html
@@ -16,7 +16,7 @@
         </div>
         <div>kenny to on uczył grać z awp.Full auto lepsze od Krzyśka GeT_RighTa potrafi z jednego końca mapy na drugi walnąć perfekcyjne full auto gdzie każdy strzał leci prosto w ciało przeciwnika.Movement kobry A jego bunnyhop zawstydza samego LOLYOU w smoke'ach czuje się niczym Snax a z pistoletów potrafi zdziałać takie cuda ze olofmeister nie wierzy.Headshoty Z jednego końca longa do gościa w pit'cie wychylonego na milimetr to codzienność.W clutchach czuje się jak ryba w wodzie.Już nie jeden jego niesamowity clutch 1vs5 został wyemitowany przez samego Sparklesa na jego kanale.Jego Vac'owe akcje które zadziwiaja m.in.skany czy zabicie 5 graczy jednym strzałem z awp przez drewienko albo rushujacy na eco przeciwnicy i rozpetane full auto gdzie w 15 setnych sekundy zabija wszystkich przeciwników poprzez strzały w głowę.Miał grać w samym Virtus.Pro odmówił współpracy ponieważ gra for fun. :csgoglobe:</div>
     </div>
-</body>
+    <img id="ph7" src="zdjecia/tomek.png">
 <div><h1>inne strony</h1>
     <a href="index.html">index</a>
     <a href="mateusz.html">Mateusz</a>
