--- a/max.html
+++ b/max.html
@@ -3,17 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Max</title>
+    <title>Podstrona</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <button id="guzior"> Kryt-On</button>
-    <button id="guzior"> Kryt-Off</button>
-    <div> Moja strona</div>
-    <div> FORTNITE CZY PUBG? PUBG. PUBG czy H1Z1? PUBG</div>
-    <div>dattebayoo</div>
-    <div> Krzysztof Wiesław Hołowczyc – polski kierowca rajdowy, mistrz Europy, prezenter telewizyjny, od 2007 do 2009 poseł do Parlamentu Europejskiego.</div>
-    <div><h1>inne strony</h1>
+    <div class="menu">
+        <div>
+            TUTAJ BEDZIE FOTO
+        </div>
+        <div>
+            Lorem dripsum garlic bomb ukraine youti fzkc lod er fdf xxcx asda wew rtertw asdx granie
+        </div>
+        <img id="ph1" src="zdjecia/max.png">
+        <button id="guzior"> Kryt-On</button>
+        <button id="guzior"> Kryt-Off</button>
+        <div> Moja strona</div>
+        <div> FORTNITE CZY PUBG? PUBG. PUBG czy H1Z1? PUBG</div>
+        <div>dattebayoo</div>
+        <div> Krzysztof Wiesław Hołowczyc – polski kierowca rajdowy, mistrz Europy, prezenter telewizyjny, od 2007 do 2009 poseł do Parlamentu Europejskiego.</div>
+        <div><h1>inne strony</h1>
+    </div>
+    <div>
         <a href="index.html">index</a>
         <a href="mateusz.html">Mateusz</a>
         <a href="marek.html">Marek</a>
