--- a/oskar.html
+++ b/oskar.html
@@ -15,8 +15,8 @@
             probuje cos zmienicc ale nic sie k nie da
             tutaj beda informacje o afryce
             jestem snajperem tutaj a to moje awupe jezeli njest zobaczysz no to jz jestes trupem
-        </div>
-    </div>
+      
+    </div>   <img id="ph1" src="zdjecia/oskar.png">
     <div><h1>inne strony</h1>
         <a href="index.html">index</a>
         <a href="mateusz.html">Mateusz</a>
@@ -26,6 +26,7 @@
         <a href="tomek.html">Tomek</a>
         <a href="szymon.html">Szymon</a>
         <a href="krzychu.html">Krzychu</a>      
-        </div>
+    </div>  
+</div>
 </body>
 </html>
