--- a/oskar2.html
+++ b/oskar2.html
@@ -12,7 +12,7 @@
             hejka jestem oskar laga pochodze z charkova. Moimy zaintersowaniami sa gry typu japanis i kolega po mojej lewej
         </div>
         <div>
-            <img src="zdjecia/oskar2.png">
+            <img id="ph5" src="zdjecia/oskar2.png">
         </div>
     
     <div><h1>inne strony</h1>
